CHANGES IN FLTK 1.1.0b11

	- Fl_Tabs didn't include images in the measurement of
	  the tabs if no label text was defined.
	- The WIN32 code didn't return 0 from the window
	  procedure after handling WM_PAINT messages.
	- fl_draw() would incorrectly test the clipping of
	  labels the lay outside the bounding box.
	- filename_relative() didn't always return the correct
	  relative path.
	- Updated the test makefile to work with more versions
	  of "make".
	- Added new "--with-optim" configure option to set the
	  optimization flags to use when compiling FLTK.
	- The fltk-config script no longer reports the
	  optimization flags that were used to compile FLTK.
	- Initial port of FLTK 2.0 drag-and-drop support.


CHANGES IN FLTK 1.1.0b10

	- Fixed the new WIN32 TrackMouseEvent code.
	- Fixed the VC++ project files to link against
	  comctl32.lib.


CHANGES IN FLTK 1.1.0b9

	- Better FL_LEAVE event handling for WIN32.
	- The alpha mask was bit-reversed.
	- Fl::scheme() applied the scheme tile image to overlay
	  and menu windows, which caused problems when the
	  overlay planes were in use.
	- Fixed Fl::event_button() value when hiding tooltip on
	  some systems.
	- Added Fl_BMP_Image class to support loading of Windows
	  bitmap (BMP) files.
	- The shiny demo didn't work on some systems (no
	  single-buffered OpenGL visual), and the new box types
	  were reset when show(argc, argv) was called.
	- Fl::scheme() didn't update windows that were not
	  shown.
	- The fractals demo would get far ahead of the UI with
	  some Linux OpenGL drivers.  Now use glFinish() instead
	  of glFlush() so we are at most 1 frame ahead.
	- The fractals demo Y axis controls were backwards for
	  the "flying" mode.
	- MacOS: cleaned up src/Fl_mac.cxx
	- MacOS: fixed Fl::wait(0.0), fixed Cmd-Q handling
	- Update CygWin support for Fl::add_fd().
	- Update the plastic scheme to not override the default
	  colors - move the color code to the MacOS-specific